src/styles/styles.css
@import "victory-docs/src/styles/styles.css";

/** FORMIDABLE CHARTS
*   WHERE EVERYTHING IS AN OVERRIDE
*/

/**
* COMPONENTS
* Discrete components of the page: such as navigation, alert dialogs, buttons, etc.
* Any new feature or component will be added to this section.
*
* sidebar:      add dark sidebar
*/
@import "./components/sidebar.css";

/**
* MANUAL OVERRIDES
*/

#content > div { /* Enable sticky footer */
  display: flex;
  flex-direction: column;
}

.Home {
  flex: 1 0 auto; /* Enable sticky footer */
  margin: 0 auto;
  padding: 0 var(--page) var(--gutter);
}

.Home-intro {
  margin: 0 auto;
  max-width: 65em;
  padding: var(--gutter);
}

/* text */
.Heading--large {
  font-size: 3.5rem;
  font-style: italic;
}

.fancyLink {
  border-style: solid;
  border-width: 39px 41px;
  border-image-slice: 39 41;
  border-image-repeat: repeat stretch;
  display: inline-block;
  font-family: var(--fontSubHeading);
  font-size: 1em;
  font-weight: normal;
  letter-spacing: 0.2em;
  line-height: 1;
  text-transform: uppercase;
  padding: 30px 24px;
  width: 100%;
  transition: color 300ms ease-out;
}

.fancyLink:link {
  border-image-source: svg-load("../../static/btn-border.svg", fill: var(--darkRed));
}

.fancyLink:visited {
  color: var(--darkRed);
}

.fancyLink:focus,
.fancyLink:hover {
  border-image-source: svg-load("../../static/btn-border.svg", fill: var(--darkGray));
  color: var(--black);
}

/* Dark Button */
.btn--dark:link,
.btn--dark:visited,
.btn--dark:active {
  background-color: var(--black);
  color: var(--white);
}

.btn--dark:hover {
  background-color: var(--nearBlack);
  color: var(--lightestSand);
}

/* Gray Button */
.btn--gray:hover {
  background-color: #D9D6D4;
}

/* Comparison Table */
.Table {
  margin: var(--gutter-small) var(--gutter-small) 0 0;
  max-width: 20em;
  font-size: 1.2em;
}

.Table th {
  padding: 3em 1.75em;
}

.Table td {
  background-color: var(--lightestSand);
  font-weight: 600;
  text-align: center;
}

.Table th,
.Table td {
  border-color: #D9D6D4;
}

.Table-td--same {
  background-color: var(--lightSand) !important;
  color: var(--black);
  font-weight: 400 !important;
}

.Table--fc th {
  border-color: var(--black);
  background-color: var(--nearBlack);
  color: var(--lightestSand);
}

.Table--v th {
  background-color: #D9D6D4;
  border-color: #D1CFCD;
}

